--- a/history.txt
+++ b/history.txt
@@ -3,3 +3,6 @@ number_for_return, total_money, product, amount, hours_rent, time_item_left, dep
 3, 510.0, sound sytem, 2, 3.0, 17/07/31 11:55, 197.18
 4, 1200.0, Bouncy House, 2, 6.0, 17/07/31 13:31, 200.00
 5, 12.0, Tables, 4, 3.0, 17/07/31 13:58, 3.60
+6, 37.5, chairs, 30, 5.0, 17/07/31 15:38, 21.00
+7, 180.0, Tables, 45, 4.0, 17/07/31 16:19, 40.50
+8, 120.0, Tables, 40, 3.0, 17/07/31 16:21, 36.00
