Erased some empty lines that were accidentally added

--- a/history.txt
+++ b/history.txt
@@ -6,3 +6,10 @@ number_for_return, total_money, product, amount, hours_rent, time_item_left, dep
 6, 37.5, chairs, 30, 5.0, 17/07/31 15:38, 21.00
 7, 180.0, Tables, 45, 4.0, 17/07/31 16:19, 40.50
 8, 120.0, Tables, 40, 3.0, 17/07/31 16:21, 36.00
+9, 1200.0, Bouncy House, 2, 6.0, 17/08/01 08:36, 200.00
+10, 270.0, Tables, 45, 6.0, 17/08/01 09:09, 40.50
+11, 56.25, Chairs, 45, 5.0, 17/08/01 09:15, 31.50
+12, 24.0, Flower Bundle, 40, 6.0, 17/08/01 09:18, 9.20
+13, 4000.0, Bouncy House, 8, 5.0, 17/08/01 09:21, 800.00
+14, 600.0, Chairs, 400, 6.0, 17/08/01 09:22, 280.00
+15, 600.0, Chairs, 400, 6.0, 17/08/01 09:25, 280.00
